fix: fixing base input field inside shadow not fully visible if input field active

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,7 +16,7 @@ $spacing-large: 1.68em;
 $row-height-large: 1em +  2*1em;
 $row-height-small: 1em +  2*$spacing-small;
 $header-height: 55px;
-$chips-spacing: 0.2em;
+$chips-spacing: 0.1em;
 $chips-list-height: 1em + 2*$spacing;
 
 /* shadows and borders */
